--- a/amazon/index.html
+++ b/amazon/index.html
@@ -146,9 +146,9 @@
         <div class="coupon-message">(1) coupon found</div>
         <div class="separator"></div>
         <div class="captcha-warning">Solve the captcha below to view the Coupon</div>
-        <div class="captcha-section">
+       <center> <div class="captcha-section">
             <!-- Captcha placeholder -->
-        </div>
+        </div></center>
     </div>
 
     <div class="footer">
