--- a/amazon/index.html
+++ b/amazon/index.html
@@ -148,7 +148,7 @@
         </div>
 
         <div id="couponBox" class="coupon-box">
-            <div class="coupon-message">(1) coupon found</div>
+            <div class="coupon-message">(1) coupon found *</div>
             <div class="separator"></div>
             <div class="captcha-warning">Solve the captcha below to view the Coupon</div>
             <center> 
