--- a/amazon/index.html
+++ b/amazon/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Coupon Finder</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <script defer data-domain="onistream.com/amazon" src="https://plausible.io/js/script.js"></script>
+
     <style>
         body,
         html {
