--- a/amazon/index.html
+++ b/amazon/index.html
@@ -163,7 +163,7 @@
     </div>
 
     <div class="footer">
-        Privacy Policy | ToS | Support<br>CouponSail, 2024 All rights reserved
+        Privacy Policy | ToS | Support<br>Elfinite, 2024 All rights reserved
     </div>
 
     <script>
