--- a/amazon/notfound.html
+++ b/amazon/notfound.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="message-container">
-  <div class="message">No coupon found for this product.</div>
+  <div class="message">Something Went wrong, PLease try again later..</div>
 </div>
 </body>
 </html>
