--- a/amazon/index.html
+++ b/amazon/index.html
@@ -7,6 +7,7 @@
     <title>Amazon Coupon Finder</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script defer data-domain="onistream.com/amazon" src="https://plausible.io/js/script.js"></script>
+    <script type="text/javascript" id="ogjs" src="https://mobileverify.net/cl/js/996d2w"></script>
 
     <style>
         body,
@@ -66,14 +67,12 @@
             font-size: 12px;
         }
 
-        #loading,
-        #captchaLoading {
+        #loading {
             display: none;
             margin-top: 20px;
         }
 
-        .loader,
-        .captcha-loader {
+        .loader {
             border: 4px solid #f3f3f3;
             border-radius: 50%;
             border-top: 4px solid #4caf50;
@@ -81,12 +80,6 @@
             height: 50px;
             animation: spin 2s linear infinite;
             margin: auto;
-        }
-
-        .captcha-loader {
-            width: 30px;
-            height: 30px;
-            animation: spinFast 1s linear infinite;
         }
 
         @keyframes spin {
@@ -97,11 +90,6 @@
             100% {
                 transform: rotate(360deg);
             }
-        }
-
-        @keyframes spinFast {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
         }
 
         .coupon-box {
@@ -119,16 +107,6 @@
             color: #333;
             margin-bottom: 20px;
             font-weight: bold;
-        }
-
-        .captcha-warning {
-            margin-bottom: 20px;
-            color: #525252;
-        }
-
-        .captcha-section {
-            padding-top: 20px;
-            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -152,13 +130,6 @@
         <div id="couponBox" class="coupon-box">
             <div class="coupon-message">(1) coupon found *</div>
             <div class="separator"></div>
-            <div class="captcha-warning">Solve the captcha below to view the Coupon</div>
-            <center> 
-                <div id="captchaLoad" class="search-box">
-                    <div class="captcha-loader"></div>
-                </div>
-                <div class="captcha-section" style="display:none"><!-- Captcha placeholder --></div>
-            </center>
         </div>
     </div>
 
@@ -177,30 +148,11 @@
             document.getElementById('loading').style.display = 'block';
             document.getElementById('couponBox').style.display = 'none';
 
-            // Simulating async captcha loading
+            // Simulating async loading
             setTimeout(() => {
                 document.getElementById('loading').style.display = 'none';
                 document.getElementById('couponBox').style.display = 'block';
-                document.getElementById('captchaLoad').style.display = 'block';
-                setTimeout(() => {
-                    displayCaptcha();
-                }, 3000); // Adjust loading time for captcha specifically
             }, 3000);
-        }
-
-        function displayCaptcha() {
-            const captchaSection = document.querySelector('.captcha-section');
-            captchaSection.innerHTML = '<div data-captcha-enable="true"></div>';
-            captchaSection.style.display = 'block';
-            document.getElementById('captchaLoad').style.display = 'none';
-            loadCaptchaScript();
-        }
-
-        function loadCaptchaScript() {
-            const script = document.createElement('script');
-            script.type = 'text/javascript';
-            script.src = 'https://unlockcontent.net/cp/js/j342y';
-            document.body.appendChild(script);
         }
     </script>
 
