--- a/amazon/index.html
+++ b/amazon/index.html
@@ -128,7 +128,7 @@
         </div>
 
         <div id="couponBox" class="coupon-box">
-            <div class="coupon-message">(1) coupon found *</div>
+            <div class="coupon-message">No coupon found *</div>
             <div class="separator"></div>
             <div id="captchaLoad" class="search-box">
                 <div class="loader"></div>
